# langgraph-project-example-a

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yaml  langgraph.json  main.py  pyproject.toml
src/app/: __init__.py
src/config/: settings.py
src/docs/: agent-flow.dio
src/graphs/article_search/: __init__.py  article_search_graph.py
src/graphs/article_writer/: __init__.py
src/graphs/example_agent/: __init__.py  example_graph.py
src/graphs/simple_chatbot/: __init__.py  example_graph.py  simple_chat_graph.py
src/mcp/jsonplaceholder/: config.py  server.py
src/mcp_servers/jsonplaceholder/: __init__.py  config.py  server.py
src/tools/search_papers/: arxiv_searcher.py  search_papers_tool.py
tests/: test_server.py
tests/mcp_servers/jsonplaceholder/: test_jsonplaceholder_mcp.py
